# secbits

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  design.md  firestore.rules  index.html  instant.perms.js  instant.perms.ts  instant.schema.js  instant.schema.ts  main.js  next.config.js  package-lock.json  package.json  perf.test.js  tsconfig.json  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: rust-ci.yml
agent_docs/: backend.md  backup.md  crypto.md  design.md  features.md  instantdb.md  leancrypto.md  model.md  plan.md  security.md  sharing.md  tech-stack.md  testing.md
app/: layout.js  page.js
backend/: Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: app.rs  commands.rs  compression.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  state.rs
data/: english-words.txt
design/: architecture.md  backup.md  crypto.md  d1.md  data-model.md  data_model.md  features.md  ipc.md  plan.md  security.md  tech-stack.md  tech_stack.md  testing.md  turso.md
docs/: architecture.md  crypto.md  data_model.md  features.md  security.md  tech_stack.md  testing.md
frontend/: App.jsx  api.js  entryUtils.js  index.css  limits.js  main.jsx  validation.js
frontend/components/: AppSetup.jsx  CardFields.jsx  EntryDetail.jsx  EntryList.jsx  ErrorBoundary.jsx  HistoryDiffModal.jsx  LoginFields.jsx  PasswordGenerator.jsx  SettingsList.jsx  SettingsPanel.jsx
frontend/tests/: api.test.js  copy-btn.test.jsx  entry-list.test.jsx  eye-toggle-btn.test.jsx  password-generator.test.jsx  tags-sidebar.test.jsx  totp.test.js  validation.test.js
leancrypto/: build-wasm.sh  leancrypto.d.ts  leancrypto.js  leancrypto.wasm  meson.build  seeded_rng_wasm.c  wasm-cross.ini
public/: _headers  firebase-config-template.json  index.html  manifest.json
public/leancrypto/: leancrypto.js  leancrypto.js.md  leancrypto.test.js  leancrypto.wasm
scripts/: create-firebase-user.mjs  create-user.mjs
src/: App.js  App.jsx  App.tsx  api.js  app.rs  backup.js  backup.rs  cli.rs  compression.rs  config.rs  crypto.js  crypto.rs  crypto.test.js  crypto.ts  db.js  db.rs  db.ts  entryUtils.js  error.rs  firebase.js  index.css  instantdb.js  lib.rs  limits.js  logging.rs  main.jsx  main.rs  main.tsx  model.rs  sampleData.js  totp.js  totp.test.js  types.ts  validation.js
src/components/: AppSetup.jsx  AppSetup.tsx  CardFields.jsx  CardFields.tsx  CopyBtn.jsx  CopyBtn.tsx  EntryDetail.js  EntryDetail.jsx  EntryDetail.tsx  EntryList.js  EntryList.jsx  EntryList.tsx  ErrorBoundary.tsx  EyeToggleBtn.jsx  EyeToggleBtn.tsx  FieldSection.jsx  FieldSection.tsx  FirebaseSetup.js  FirebaseSetup.jsx  HistoryDiffModal.jsx  HistoryDiffModal.tsx  KeyRotation.jsx  KeyRotation.tsx  KeyStoreManager.jsx  LoginFields.jsx  LoginFields.tsx  NotesField.jsx  NotesField.tsx  PanelHeader.jsx  PanelHeader.tsx  PasswordGenerator.jsx  PasswordGenerator.tsx  ResizeHandle.jsx  ResizeHandle.tsx  SettingsList.jsx  SettingsList.tsx  SettingsPanel.js  SettingsPanel.jsx  SettingsPanel.tsx  SidebarPanel.jsx  (+8 more)
src/hooks/: useVaultState.ts
src/lib/: api.js  backup.js  backup.ts  blob.js  blob.ts  commitHash.js  commitHash.ts  crypto.js  entryUtils.js  entryUtils.ts  limits.js  s3.js  s3.ts  storage.ts  totp.js  totp.ts  validation.js  validation.ts  zbase32.js
src/tests/: api.test.js  backup.test.js  backup.test.ts  blob.test.js  blob.test.ts  commit-hash.test.js  commit-hash.test.ts  crypto-entry-history.test.js  crypto-entry-key.test.js  crypto-master-key.test.js  crypto-root-key.test.js  crypto-root-key.test.ts  crypto.test.js  crypto.test.ts  db-pure.test.js  db-pure.test.ts  entry-lifecycle.test.js  entry-utils.test.js  entry-utils.test.ts  export-data.test.js  firebase-history-format.test.js  firebase-key-lifecycle.test.js  history-format.test.js  history.test.js  key-hierarchy.test.js  key-rotation.test.js  leancrypto.sphincs-vectors.js  leancrypto.test.js  leancrypto.test.ts  perf.test.js  s3.test.js  s3.test.ts  search.test.js  search.test.ts  storage.test.ts  totp.test.js  totp.test.ts  validation.test.js  validation.test.ts  zbase32.test.js
tests/: auth_lifecycle.rs  cli_help.rs  history_commands.rs
worker/: package-lock.json  package.json  schema.sql  wrangler.toml  wrangler.toml.example
worker/scripts/: deploy.sh
worker/src/: auth.js  db.js  firebase.js  index.js  rqlite.js  zbase32.js
worker/tests/: firebase.test.js  rqlite.test.js  schema.test.js  worker-entries.test.js  worker-keys.test.js
