[package]
name = "secbits"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
brotli = "8.0"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
data-encoding = "2.9"
hmac = "0.12"
leancrypto-sys = "0.2.2"
rand = "0.9"
regex = "1.12"
rpassword = "7.4.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.21"
