[package]
name = "secbits"
version = "0.1.0"
edition = "2024"

[features]
default = []
desktop = ["dep:tauri"]

[lib]
name = "secbits"
path = "src/lib.rs"

[[bin]]
name = "secbits"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
brotli = "8.0"
leancrypto-sys = "0.2.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [], optional = true }
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
base64 = "0.22"
