[package]
name = "secbits"
version = "0.1.0"
edition = "2024"

[features]
default = []
desktop = ["dep:tauri"]

[lib]
name = "secbits"
path = "src/lib.rs"

[[bin]]
name = "secbits"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
brotli = "8.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
leancrypto-sys = "0.2.2"
rand = "0.9"
rfd = "0.17.2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2", features = [], optional = true }
thiserror = "2.0"
toml = "0.9"
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.15"
